Replace Spring Boot example with self-contained epoll echo server
Raw Netty HTTP server with epoll pinned pollers demonstrating blocking
VT handlers, structured concurrency with carrier affinity, and carrier
info in responses. No Spring Boot, no external dependencies.

Endpoints:
  GET /         - blocking handler (50ms), returns VT + carrier info
  GET /parallel - StructuredTaskScope fork/join on same carrier